--- a/color.css
+++ b/color.css
@@ -41,9 +41,6 @@ header {
 }
 
 .todo-widget {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
   gap: 1rem;
 }
 .add-task {
@@ -60,6 +57,7 @@ header {
 }
 input {
   padding: 0.5rem 1rem;
+  margin-top: 1rem;
   border-radius: 0.2rem;
   -webkit-border-radius: 0.2rem;
   -moz-border-radius: 0.2rem;
@@ -67,6 +65,7 @@ input {
   -o-border-radius: 0.2rem;
   outline: none;
 }
+
 .singUp {
   cursor: pointer;
   padding: 1rem 1.5rem;
